<resources>
    <string name="app_name">爬耙读书</string>

    <item name="tag_pos" type="id">pos</item>
    <item name="tag_chap_index" type="id">chap_index</item>
    <item name="tag_need_update" type="id">0</item>
    <item name="tag_page_begin" type="id">0</item>
    <item name="tag_chapter" type="id">chapter</item>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_store_title">书城</string>
    <string name="book_search_title">书城搜索</string>
    <string name="book_search_loading">正在搜索中...</string>
    <string name="book_search_err_network">网络无法连接，请检查相关设置</string>
    <string name="book_search_err_no_result">未搜索到相关内容</string>
    <string name="book_search_err_too_many">查找条件需要更详细</string>
    <string name="book_case_title">我的书架</string>
    <string name="book_case_edit">编辑</string>
    <string name="book_case_search">搜索</string>
    <string name="panel_search">搜索</string>
    <string name="panel_dict">目录</string>cache
    <string name="panel_cache">缓存</string>
    <string name="panel_case">书架</string>
    <string name="prompt_title">提示</string>
    <string name="prompt_msg">您确认要加入书架吗？</string>
    <string name="prompt_ok">确认</string>
    <string name="prompt_cancel">取消</string>
    <string name="book_loading">正在获取中...</string>
    <string name="book_cover_desc">简介：</string>
    <string name="book_cover_prev_page">上一页</string>
    <string name="book_cover_last_page">下一页</string>
    <string name="book_cover_list_page">目录列表</string>
    <string name="book_cover_exit">回退</string>
    <string name="cache_complete">缓存结束</string>
    <string name="book_search_hint">搜索书名</string>
    <string name="book_chapter">第%1$d章-第%2$d章</string>
    <string name="book_duration">%1$d小时%2$d分</string>
    <string name="book_case_remove">删除</string>
    <string name="book_refresh">重新刷新</string>



</resources>
