<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/book_case_edit"
            android:layout_weight="0"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="20sp"
            android:textColor="#0091EA"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_case_title"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#000000" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/book_case_search"
            android:gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:textColor="#0091EA"/>
    </LinearLayout>
    <GridView
        android:layout_margin="15dp"
        android:numColumns="auto_fit"
        android:columnWidth="100dp"
        android:verticalSpacing="20dp"
        android:stretchMode="spacingWidth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/case_grid" />
</LinearLayout>